--- a/assets/style.css
+++ b/assets/style.css
@@ -14,8 +14,14 @@ header {
 
 #search-bar {
     margin: 3px 0;
+    width: 100%;
 }
 
 #searchBtn {
     margin: 8px 0;
+    width: 100%;
+    height: 40px;
+    text-align: center;
+    justify-content: center;
+    font-size: 20px;
 }
