--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,10 @@
+* {
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    list-style: none;
+}
+
 header {
     text-align: center;
     padding: 20px;
@@ -24,4 +31,14 @@ header {
     text-align: center;
     justify-content: center;
     font-size: 20px;
+}
+
+#search-history {
+    background-color: grey;
+    padding: 8px;
+}
+
+#history-list {
+    margin: 0;
+    padding: 0;
 }
