--- a/assets/style.css
+++ b/assets/style.css
@@ -44,5 +44,8 @@ header {
 }
 
 #historyBtn {
-    
+    width: 100%;
+    text-align: center;
+    justify-content: center;
+    font-size: 18px;
 }
