--- a/assets/style.css
+++ b/assets/style.css
@@ -15,7 +15,6 @@ header {
 }
 
 #search-container {
-    /* border: 2px solid black; */
     padding: 10px;
     height: fit-content;
 }
@@ -23,6 +22,7 @@ header {
 #search-bar {
     margin: 15px 0 20px 0;
     width: 100%;
+    height: 40px;
 }
 
 #searchBtn {
@@ -32,7 +32,9 @@ header {
     text-align: center;
     justify-content: center;
     font-size: 20px;
+    border: #669ee8;
     border-radius: 10px;
+    background-color: #669ee8;
 }
 
 #search-history {
@@ -55,8 +57,18 @@ header {
     font-size: 18px;
     margin: 8px 0;
     border-radius: 10px;
+    border: #a4c2e9;
+    background-color: #a4c2e9;
 }
 
 .forecast-container {
     margin-left: 15px;
+}
+
+.current-weather {
+    margin-left: 15px;
+}
+
+.five-day {
+    margin-top: 10px;
 }
